2005-07-15  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/installlib.pl (spin($)): Option to supress spinner.

2005-06-24  Seth Robertson  <seth@blue.sysdetect.com>

	* perl/BkReportGen/helper_health_include.pl
	(helper_health_include($$$$)): Do not include HEALTH= in message
	presented to user.  Fix some outright syntax errors.

2005-04-25  James Tanis  <jtt@cheviot.sysdetect.com>

	* Baka/RT.pm: Port ticket modifying and searching functions to RT
	version 3.

2005-01-22  James Tanis  <jtt@cheviot.sysdetect.com>

	* Baka/Conf.pm: Evidently $f->{f}{b} != $f->{f}->{b} in 5.8.5. Let's
	up this is just a bug.

2004-11-24  Alexander Dupuy  <dupuy@sysdetect.com>

	* Baka/Conf.pm: use first, not last, occurrence of a key [for
	consistency with C and Java implementations]

2004-10-28  James Tanis  <jtt@fry.sysdetect.com>

	* Baka/StructuredConf.pm: search_up: Method for finding a key
	within an ancestor of a node.
	search_down: Method for locating a key in a subtree.

2004-10-19  James Tanis  <jtt@buscemi.sysdetect.com>

	* Baka/StructuredConf.pm: Check for non-unique keys.

2004-10-18  James Tanis  <jtt@buscemi.sysdetect.com>

	* Baka/RT.pm (Baka): Documentation

	* lib/libbk.pl (normalize_path($;$)): Correct bad identifier

2004-10-15  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/libbk.pl (normalize_path($;$)): Function to eliminate
	unwanted ..'s and .'s from paths. Optionally convert real paths to
	amd paths.

2004-10-13  James Tanis  <jtt@buscemi.sysdetect.com>

	* Baka/RT.pm: /dev/null RT output from keyword addition.

	* Baka/StructuredConf.pm: Don't overparse strings.

2004-10-07  James Tanis  <jtt@buscemi.sysdetect.com>

	* Baka/RT.pm: Return ticket number when ticket is created.
	Add keywords method

2004-10-04  James Tanis  <jtt@buscemi.sysdetect.com>

	* Baka/StructuredConf.pm: Handle comments.

2004-09-07  Seth Robertson  <seth@cheviot.sysdetect.com>

	* perl/BkReportGen/helper_smart.pl (helper_smart($$$$)): Enable
	S.M.A.R.T. disk health monitoring.
